--- a/Week 2/Assesment.ipynb
+++ b/Week 2/Assesment.ipynb
@@ -643,7 +643,7 @@
     "import openai\n",
     "import json\n",
     "\n",
-    "openai.api_key = 'sk-rwjNbLympiD0hqPlR04lq5sN4F7iuHdFQ7WGk_TKc1T3BlbkFJL0S4F1DeljYSfRlzYi3ZnxL1v6QGL1YvgpMNThV1EA'\n",
+    "openai.api_key = 'OPENAI_TOKEN'\n",
     "\n",
     "summary_dict = {}\n",
     "\n",
